[package]
authors = ["snowpoke <hello@snowpoke.ink>"]
edition = "2018"
name = "unbox-box"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert2 = "0.3.5"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
