[package]
authors = ["snowpoke <hello@snowpoke.ink>"]
description = "\"Wait why did I put a `*` in front of that variable yesterday?\" - If `var` is a Box, use `var.unbox_ref()` instead of `&*var` for better readability."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "unbox-box"
version = "0.1.0"
#homepage = 
#documentation = 
categories = ["data-structures", "memory-management", "rust-patterns"]
keywords = ["pointer", "reference", "unwrap", "extension", "readability"]
readme = "README.md"
repository = "https://github.com/snowpoke/unbox-box"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert2 = "0.3.5"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
